--- a/src/scss/utils/mixins/_backgrounds.scss
+++ b/src/scss/utils/mixins/_backgrounds.scss
@@ -12,7 +12,7 @@
 
 @mixin mask {
   content: "";
-  position: absolute;
+  position: relative;
   mask-position: center;
   mask-repeat: no-repeat;
   mask-size: cover;
