--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,22 +2,21 @@
 @use "../utils/mixins/" as *;
 
 h1,
-h2 {
+h2,
+h3 {
   overflow: hidden;
-  font-family: var(--font-family-secondary);
   font-weight: var(--fw-400);
-  font-size: clamp(45px, 2.5rem + 6.9444vi, 140px);
+  font-size: clamp(55px, 0.625rem + 12.5vi, 190px);
   line-height: 1.2;
+  letter-spacing: -0.021em;
   text-transform: uppercase;
 }
 
 h2,
 .title {
   margin-bottom: 16px;
-  font-size: clamp(28px, 1.1667rem + 2.5926vi, 56px);
-  line-height: 1.4;
-  color: var(--color-blue-600);
-  text-align: center;
+  font-size: clamp(45px, 1.6667rem + 5.0926vi, 100px);
+  line-height: 1.08;
 }
 
 .title {
@@ -29,11 +28,9 @@ h2,
 }
 
 h3 {
-  margin-bottom: 16px;
-  font-weight: var(--fw-600);
-  font-size: clamp(18px, 1rem + 0.5556vi, 24px);
-  line-height: 1.5;
-  color: var(--color-blue-400);
+  font-size: clamp(1.125rem, 00.875rem + 1.1111vi, 30px);
+  line-height: 1.1;
+  text-transform: none;
 }
 
 p {
@@ -42,6 +39,10 @@ p {
 
 .subtext {
   font-size: clamp(16px, 0.9167rem + 0.3704vi, 21px);
-  line-height: 1.6;
-  color: var(--color-dark-900);
+  color: var(--color-gray-50);
+  text-transform: uppercase;
+
+  &--second {
+    font-family: var(--font-family-secondary);
+  }
 }
