--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -7,17 +7,18 @@
   align-items: center;
   justify-content: center;
   margin: 0;
-  border-radius: 0;
-  border: 1px solid var(--color-blue-300);
-  padding: 15px 24px;
+  border-radius: 100px;
+  border: 1px solid var(--color-white);
+  padding: 11px 19px;
   width: 100%;
   max-width: fit-content;
   font-family: inherit;
-  font-weight: var(--fw-600);
-  font-size: 16px;
-  line-height: 1;
-  color: var(--color-white);
-  background-color: transparent;
+  font-weight: var(--fw-400);
+  font-size: 14px;
+  line-height: 1.25;
+  text-transform: uppercase;
+  color: var(--color-black);
+  background-color: var(--color-white);
   transition-property: background-color, color, border-color;
   transition-duration: 0.3s;
 
@@ -30,7 +31,8 @@
 
   &--request {
     border-color: transparent;
-    background-color: var(--color-blue-300);
+    color: var(--color-black) !important;
+    background-color: var(--color-white);
 
     &:hover,
     &:focus {
@@ -40,23 +42,28 @@
     }
   }
 
-  &--arrow {
-    z-index: 1;
-    position: relative;
-    margin-bottom: 24px;
-    padding: 16px 24px;
-    min-width: fit-content !important;
-    gap: 10px;
-
-    &::before {
-      @include mask;
-
-      position: relative;
-      width: 18px;
-      height: 18px;
-      mask-image: url("../images/icons/arrow.svg");
-    }
+  &--sign {
+    color: var(--color-white);
+    background-color: transparent;
   }
+
+  // &--arrow {
+  //   z-index: 1;
+  //   position: relative;
+  //   margin-bottom: 24px;
+  //   padding: 16px 24px;
+  //   min-width: fit-content !important;
+  //   gap: 10px;
+
+  //   &::before {
+  //     @include mask;
+
+  //     position: relative;
+  //     width: 18px;
+  //     height: 18px;
+  //     mask-image: url("../images/icons/arrow.svg");
+  //   }
+  // }
 
   &--big {
     padding: 12px 47px;
