--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,17 +3,15 @@
 
 .header {
   position: fixed;
-  top: 0;
+  top: 50px;
   z-index: 10;
-  padding: 26px 0;
+  padding: 0;
   width: 100%;
   background-color: transparent;
   transition-property: background-color, transform;
   transition-duration: 0.25s;
 
-  &.logo {
-    margin-right: rem(96);
-  }
+
 
   &.hide {
     transform: translateY(-200%);
@@ -22,7 +20,8 @@
   &.scroll,
   &.active,
   &--colored {
-    background: var(--color-blue-600);
+    top: 10px;
+    background: var(--color-black);
   }
 
   @include media(desktop) {
@@ -32,10 +31,4 @@
     }
   }
 
-  @include media(tablet-wide) {
-    .nav__btns {
-      flex-direction: column;
-      gap: 24px;
-    }
-  }
 }
