--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -28,7 +28,10 @@
   --color-gray-50: #f3f3f3;
   --color-gray-100: #eeeeee;
   --color-gray-300: #acacac;
+  --color-gray-400: #B6BDC6;
+  --color-blue-50: #eef6fd;
   --color-blue-100: #ebf2fa;
+  --color-blue-200: #74c8e0;
   --color-blue-300: #89abe3;
   --color-blue-400: #5679a6;
   --color-blue-600: #122339;
