--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -76,16 +76,11 @@ body {
   }
 }
 
-.container,
-.wrapper {
+.container {
   margin: 0 auto;
   padding: 0 var(--container-offset);
   width: 100%;
   max-width: var(--container-width);
-}
-
-.wrapper {
-  max-width: 1345px;
 }
 
 .site-container {
@@ -93,6 +88,25 @@ body {
   grid-template-columns: 100%;
   grid-template-rows: 1fr auto;
   min-height: var(--vh);
+}
+
+.gallery {
+  padding-bottom: 170px;
+
+
+  h2 {
+    margin-bottom: 82px;
+    font-size: clamp(45px, -0.2083rem + 13.4259vi, 190px);
+    color: var(--color-blue-200);
+    border: 1px solid var(--color-white);
+    border-left: none;
+    border-right: none;
+    line-height: 1.3;
+  }
+
+  img {
+    width: 100%;
+  }
 }
 
 .travel {
@@ -128,8 +142,8 @@ body {
   &::before {
     content: "";
     position: absolute;
-    background:
-      linear-gradient(180deg, rgba(5, 6, 11, 0.19), rgba(5, 6, 11, 0) 50%, rgb(5, 6, 11) 100%), rgba(5, 6, 11, 0.4),;
+    background: linear-gradient(180deg, rgba(5, 6, 11, 0.19), rgba(5, 6, 11, 0) 50%, rgb(5, 6, 11) 100%),
+      rgba(5, 6, 11, 0.4);
     inset: 0;
   }
 
