--- a/src/scss/components/_additional.scss
+++ b/src/scss/components/_additional.scss
@@ -21,6 +21,10 @@
     border-radius: 10px;
     margin-right: 184px;
     width: calc(100% - 566px - 184px);
+
+    img {
+      width: 100%;
+    }
   }
 
   &--reverse {
@@ -28,7 +32,7 @@
       display: flex;
       align-items: center;
       padding-right: 0;
-      padding-left: max(16px, calc((100% - 1350px) / 2));
+      padding-left: max(16px, calc((100% - 1320px) / 2));
     }
 
     #{$root}__image {
