--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,40 +2,56 @@
 @use "../utils/mixins/" as *;
 
 .footer {
-  background-color: var(--color-dark-900);
+  padding-top: 100px;
 
-  a {
-    transition: color 0.3s linear;
+  &__image {
+    border: 1px solid var(--color-white);
+    border-left: none;
+    border-right: none;
 
-    &:hover {
-      color: var(--color-blue-400);
-    }
-  }
-
-  &__bottom {
-    position: relative;
-    padding: 22px 0;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
+    img {
       width: 100%;
-      height: 1px;
-      background-color: var(--color-white);
     }
   }
 
   &__copy {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    padding: 32px 0;
+  }
+
+    &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: var(--color-blue-50);
+    gap: 11px;
+
+    &::before {
+      content: "";
+      position: relative;
+      background-image: url("../images/icons/mail.svg");
+      background-position: center;
+      background-size: cover;
+      width: 40px;
+      height: 40px;
+    }
   }
 
   &__policy {
     display: flex;
     font-weight: var(--fw-700);
-    gap: 48px;
+    gap: 23px;
+
+    a {
+      font-size: 20px;
+      color: var(--color-gray-400);
+    }
   }
+
+
 
   @include media(mobile-l) {
     &__copy {
