--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -76,9 +76,9 @@
     }
   }
 
-  &--home {
-    margin-top: -490px;
-  }
+  // &--home {
+  //   margin-top: -490px;
+  // }
 
   &--main {
     padding-top: 75px;
