--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -34,6 +34,13 @@ body {
       transition: opacity 0.3s;
       inset: 0;
     }
+
+    &--decor {
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      max-height: 1440px;
+    }
   }
 
   &.open {
@@ -93,7 +100,6 @@ body {
 .gallery {
   padding-bottom: 170px;
 
-
   h2 {
     margin-bottom: 82px;
     font-size: clamp(45px, -0.2083rem + 13.4259vi, 190px);
@@ -110,14 +116,34 @@ body {
 }
 
 .travel {
+  margin-top: -450px;
+  z-index: 1;
+  position: relative;
+
   li {
-    &:not(:last-child) {
-      margin-bottom: 48px;
+    position: relative;
+    padding: 60px 0;
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 1px;
+      background-color: var(--color-white);
+      opacity: 0.2;
     }
+    // &:not(:last-child) {
+    //   margin-bottom: 60px;
+    // }
 
     p {
       line-height: 1.5;
     }
+  }
+
+  h3 {
+    margin-bottom: 24px;
   }
 
   @include media(tablet) {
@@ -145,6 +171,7 @@ body {
     background: linear-gradient(180deg, rgba(5, 6, 11, 0.19), rgba(5, 6, 11, 0) 50%, rgb(5, 6, 11) 100%),
       rgba(5, 6, 11, 0.4);
     inset: 0;
+    opacity: 1;
   }
 
   &--gray {
