--- a/src/scss/components/_reviews.scss
+++ b/src/scss/components/_reviews.scss
@@ -3,50 +3,43 @@
 @use "../utils/mixins/" as *;
 
 .reviews {
+  padding-bottom: 150px;
+
   &__title {
     margin-bottom: 60px;
 
     h2 {
-      margin-bottom: 24px;
-      font-size: clamp(1.25rem, 1rem + 1.1111vi, 2rem);
-      line-height: 1.2;
-      text-align: left;
-      color: var(--color-blue-400);
+      margin-bottom: 4px;
     }
   }
 
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
-  }
-
-  &__author {
-    display: grid;
-    place-items: center;
     width: 100%;
-    max-width: 120px;
-    gap: 7px;
+    max-width: 947px;
+    margin: 0 auto 48px;
+    gap: 38px;
   }
 
-  li {
-    display: grid;
-    align-items: center;
-    grid-template-columns: repeat(2, auto);
-    padding: 30px 40px;
-    background-color: var(--color-blue-100);
-    gap: 40;
-
-    p {
-      font-size: 16px;
-      color: var(--color-dark-900);
+  &__item {
+    &:first-of-type {
+      padding-top: 58px;
     }
   }
 
+  &__desc {
+    position: absolute;
+    bottom: 48px;
+    left: 50px;
+    right: 50px;
+    width: 100%;
+    max-width: 354px;
+  }
+
   h3 {
-    margin-bottom: 0;
-    font-size: 21px;
-    text-align: center;
+    margin-bottom: 32px;
+    text-transform: uppercase;
   }
 
   @include media(tablet) {
