--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -40,6 +40,10 @@ body {
       background-size: cover;
       background-repeat: no-repeat;
       max-height: 1440px;
+
+      &.articles {
+        max-height: 884px;
+      }
     }
   }
 
@@ -63,23 +67,6 @@ body {
 
   @include media(tablet) {
     padding: 30px 0;
-  }
-}
-
-.background {
-  color: var(--color-white);
-  background-color: var(--color-dark-900);
-
-  h2 {
-    color: var(--color-white);
-  }
-
-  &--light {
-    background-color: var(--color-blue-100);
-
-    h2 {
-      color: var(--color-blue-600);
-    }
   }
 }
 
@@ -116,13 +103,11 @@ body {
 }
 
 .travel {
-  margin-top: -450px;
-  z-index: 1;
-  position: relative;
+  padding: 140px 0 100px;
 
   li {
     position: relative;
-    padding: 60px 0;
+    padding: 58px 0;
 
     &::before {
       content: "";
@@ -142,8 +127,13 @@ body {
     }
   }
 
+  h2 {
+    margin-bottom: 34px;
+  }
+
   h3 {
     margin-bottom: 24px;
+    letter-spacing: 0.02em;
   }
 
   @include media(tablet) {
@@ -188,4 +178,19 @@ body {
   justify-content: center;
   width: 100%;
   max-width: 280px;
+}
+
+.transparent {
+  padding: 100px 39px 150px;
+  mix-blend-mode: difference;
+
+  p {
+    font-weight: var(--fw-300);
+    font-size: clamp(35px, 0.8333rem + 6.0185vi, 100px);
+    line-height: 1.05;
+    letter-spacing: -0.01em;
+    text-align: center;
+    mix-blend-mode: difference;
+    text-transform: uppercase;
+  }
 }
