--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -47,23 +47,22 @@
     background-color: transparent;
   }
 
-  // &--arrow {
-  //   z-index: 1;
-  //   position: relative;
-  //   margin-bottom: 24px;
-  //   padding: 16px 24px;
-  //   min-width: fit-content !important;
-  //   gap: 10px;
+  &--arrow {
+    z-index: 1;
+    margin-bottom: 22px;
+    border-color: var(--color-white);
+    color: var(--color-white);
+    background-color: transparent;
+    padding: 12px 20px;
+    gap: 10px;
 
-  //   &::before {
-  //     @include mask;
-
-  //     position: relative;
-  //     width: 18px;
-  //     height: 18px;
-  //     mask-image: url("../images/icons/arrow.svg");
-  //   }
-  // }
+    &::before {
+      @include mask;
+      width: 18px;
+      height: 18px;
+      mask-image: url("../images/icons/arrow.svg");
+    }
+  }
 
   &--big {
     padding: 12px 47px;
