--- a/src/scss/components/_policy.scss
+++ b/src/scss/components/_policy.scss
@@ -8,11 +8,6 @@
     }
   }
 
-  h1 {
-    margin-bottom: 71px;
-    text-align: center;
-  }
-
   h2 {
     margin-bottom: 24px;
     font-size: clamp(25px, 1.0417rem + 0.9259vi, 30px);
@@ -20,20 +15,25 @@
   }
 
   ul {
-    margin-bottom: 20px;
-    padding-left: 15px;
+    &:not([class]) {
+      margin-bottom: 20px;
+      padding-left: 15px;
+    }
   }
 
   li {
-    padding-left: 10px;
+    &:not([class]) {
+      padding-left: 10px;
+      font-size: 18px;
 
-    &:not(:last-child) {
-      margin-bottom: 3px;
-    }
+      &:not(:last-child) {
+        margin-bottom: 3px;
+      }
 
-    &::marker {
-      content: "✓";
-      color: var(--color-blue-400);
+      &::marker {
+        content: "✓";
+        color: var(--color-blue-400);
+      }
     }
   }
 
@@ -43,13 +43,11 @@
     }
   }
 
-  li {
-    font-size: 18px;
-  }
-
   a {
-    text-decoration: underline;
-    color: var(--color-blue-200);
+    &:not([class]) {
+      text-decoration: underline;
+      color: var(--color-blue-200);
+    }
   }
 
   @include media(tablet) {
