--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -44,6 +44,14 @@ body {
       &.articles {
         max-height: 884px;
       }
+
+      &.policy {
+        max-height: 1552px;
+        &::before {
+          background: linear-gradient(180deg, rgba(5, 6, 11, 0.19), rgba(5, 6, 11, 0) 50%, rgb(5, 6, 11) 100%),
+            rgba(5, 6, 11, 0.8);
+        }
+      }
     }
   }
 
@@ -57,8 +65,7 @@ body {
   }
 }
 
-.section,
-.background {
+.section {
   padding: rem(86) 0;
 
   @include media(tablet-wide) {
@@ -89,16 +96,36 @@ body {
 
   h2 {
     margin-bottom: 82px;
-    font-size: clamp(45px, -0.2083rem + 13.4259vi, 190px);
-    color: var(--color-blue-200);
     border: 1px solid var(--color-white);
-    border-left: none;
     border-right: none;
+    border-left: none;
+    font-size: clamp(45px, -0.2083rem + 13.4259vi, 190px);
     line-height: 1.3;
+    color: var(--color-blue-200);
   }
 
   img {
     width: 100%;
+  }
+
+  @include media(tablet-wide) {
+    padding-bottom: 100px;
+  }
+
+  @include media(tablet) {
+    padding-bottom: 80px;
+
+    h2 {
+      margin-bottom: 50px;
+    }
+  }
+
+  @include media(mobile-l) {
+    padding-bottom: 35px;
+
+    h2 {
+      margin-bottom: 35px;
+    }
   }
 }
 
@@ -118,9 +145,6 @@ body {
       background-color: var(--color-white);
       opacity: 0.2;
     }
-    // &:not(:last-child) {
-    //   margin-bottom: 60px;
-    // }
 
     p {
       line-height: 1.5;
@@ -136,7 +160,13 @@ body {
     letter-spacing: 0.02em;
   }
 
+  @include media(tablet-wide) {
+    padding: 80px 0;
+  }
+
   @include media(tablet) {
+    padding: 35px 0;
+
     li {
       &:not(:last-child) {
         margin-bottom: 30px;
@@ -147,7 +177,7 @@ body {
 
 .main {
   &--top {
-    padding-top: var(--header-height);
+    padding-top: calc(var(--header-height) + 20px);
   }
 }
 
@@ -160,8 +190,8 @@ body {
     position: absolute;
     background: linear-gradient(180deg, rgba(5, 6, 11, 0.19), rgba(5, 6, 11, 0) 50%, rgb(5, 6, 11) 100%),
       rgba(5, 6, 11, 0.4);
-    inset: 0;
     opacity: 1;
+    inset: 0;
   }
 
   &--gray {
@@ -182,7 +212,6 @@ body {
 
 .transparent {
   padding: 100px 39px 150px;
-  mix-blend-mode: difference;
 
   p {
     font-weight: var(--fw-300);
@@ -190,7 +219,15 @@ body {
     line-height: 1.05;
     letter-spacing: -0.01em;
     text-align: center;
-    mix-blend-mode: difference;
     text-transform: uppercase;
+    mix-blend-mode: difference;
+  }
+
+  @include media(tablet-wide) {
+    padding: 70px 39px;
+  }
+
+  @include media(tablet-wide) {
+    padding: 16px 0;
   }
 }
