--- a/src/scss/pages/about/_team.scss
+++ b/src/scss/pages/about/_team.scss
@@ -14,14 +14,18 @@
     position: relative;
     overflow: hidden;
     border-radius: 10px;
+
+    img {
+      width: 100%;
+    }
   }
 
   &__desc {
     position: absolute;
     overflow: hidden;
     border-radius: 10px;
-    left: 20px;
-    right: 20px;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 20px;
     padding: 20px;
     width: 100%;
@@ -44,5 +48,46 @@
     font-weight: var(--fw-500);
     font-size: 25px;
     color: var(--color-black);
+  }
+
+  @include media(tablet-wide) {
+    padding: 40px 0 70px;
+  }
+
+  @include media(tablet-wide) {
+    padding: 40px 0;
+  }
+
+  @include media(tablet) {
+    &__list {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__item {
+      &:last-child {
+        grid-column: 2 span;
+
+        img {
+          aspect-ratio: 2/1;
+        }
+      }
+    }
+  }
+
+  @include media(mobile-l) {
+    &__list {
+      grid-template-columns: 1fr;
+    }
+
+    &__item {
+      img {
+        object-position: center;
+        aspect-ratio: 2/1;
+      }
+
+      &:last-child {
+        grid-column: auto;
+      }
+    }
   }
 }
