--- a/src/scss/pages/home/_choose.scss
+++ b/src/scss/pages/home/_choose.scss
@@ -16,8 +16,8 @@
     &::before {
       content: counter(adv-counter, decimal-leading-zero);
       position: absolute;
-      font-size: clamp(25px, 0.2083rem + 4.6296vi, 70px);
       left: 0;
+      font-size: clamp(25px, 0.2083rem + 4.6296vi, 70px);
       line-height: 1.1;
     }
 
@@ -30,7 +30,6 @@
       background-color: var(--color-white);
       opacity: 0.2;
     }
-
   }
 
   &__desc {
@@ -47,17 +46,31 @@
     font-size: clamp(25px, 0.2083rem + 4.6296vi, 70px);
   }
 
+  @include media(tablet-wide) {
+    padding-bottom: 80px;
+
+    &__desc {
+      padding-left: 65px;
+    }
+
+    &__item {
+      padding: 30px;
+
+      &::before {
+        margin-bottom: 16px;
+      }
+    }
+  }
+
   @include media(tablet) {
+    padding-bottom: 35px;
+
     &__title {
       margin-bottom: 30px;
     }
 
     &__item {
-      padding: 16px;
-
-      &::before {
-        margin-bottom: 16px;
-      }
+      padding: 30px;
     }
 
     h3 {
@@ -66,32 +79,12 @@
   }
 
   @include media(mobile-l) {
-    &__list {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 25px;
-    }
-
     &__item {
-      &:last-child {
-        grid-column: 2 span;
-      }
+      padding: 16px 0;
     }
 
-    h3 {
-      max-width: 100%;
-      font-size: 20px;
-    }
-  }
-
-  @include media(mobile-m) {
-    &__list {
-      grid-template-columns: 1fr;
-    }
-
-    &__item {
-      &:last-child {
-        grid-column: auto;
-      }
+    h2 {
+      line-height: 1.2;
     }
   }
 }
