--- a/src/scss/components/_articles.scss
+++ b/src/scss/components/_articles.scss
@@ -4,7 +4,7 @@
 .articles {
   h2 {
     margin-bottom: 24px;
-    font-size: clamp(1.25rem, 1rem + 1.1111vi, 2rem);
+    font-size: clamp(20px, 1rem + 1.1111vi, 32px);
     color: var(--color-blue-200);
   }
 
@@ -14,6 +14,16 @@
     li {
       &:not(:last-child) {
         margin-bottom: 48px;
+      }
+    }
+  }
+
+  @include media(tablet) {
+    padding: 30px 0;
+
+    li {
+      &:not(:last-child) {
+        margin-bottom: 24px;
       }
     }
   }
