--- a/src/scss/components/_blog.scss
+++ b/src/scss/components/_blog.scss
@@ -18,6 +18,7 @@
   }
 
   &__item {
+    position: relative;
     overflow: hidden;
     border-radius: 10px;
 
@@ -58,28 +59,37 @@
   }
 
   a {
-    position: absolute;
-    left: 50%;
-    top: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    background-color: var(--color-black);
-    transform: translate(-50%, -50%);
+
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+    }
 
     &::after {
-      @include mask;
-
-      mask-image: url("../images/icons/arrow-small.svg");
-      width: 18px;
-      height: 16px;
+      content: "";
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      background-image: url("../images/icons/arrow-small.svg");
+      background-position: center;
+      background-size: 18px 16px;
+      background-repeat: no-repeat;
+      background-color: var(--color-black);
+      transform: translate(-50%, -50%);
+      transition: background-color 0.4s linear;
     }
 
     &:hover {
-      color: var(--color-blue-200);
+      &::after {
+        background-color: var(--color-blue-200);
+      }
     }
   }
 
@@ -170,8 +180,10 @@
     }
 
     a {
-      width: 40px;
-      height: 40px;
+      &::after {
+        width: 40px;
+        height: 40px;
+      }
     }
   }
 }
