--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -5,7 +5,7 @@
   padding-top: 100px;
 
   a {
-    transition: color 0.3s linear; 
+    transition: color 0.3s linear;
 
     &:hover {
       color: var(--color-blue-200);
@@ -29,11 +29,11 @@
     padding: 32px 0;
   }
 
-  &__link {
+  &__mail {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
     font-size: clamp(16px, 0.9167rem + 0.3704vi, 20px);
     color: var(--color-blue-50);
     gap: 11px;
@@ -83,9 +83,4 @@
     }
   }
 
-  @include media(mobile-m) {
-    &__link {
-      
-    }
-  }
 }
